--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "jsx": "preserve",
     "incremental": true
   },
+  "presets": ["next/babel"],
+  "plugins": [["styled-components", { "ssr": true }]],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
