--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
   "cSpell.words": [
     "acao",
+    "Descricão",
+    "Formulario",
     "operacao",
-    "Paginacao"
+    "Paginacao",
+    "visivel"
   ],
   "dotenv.enableAutocloaking": false
 }
